overview: Add title for app info dialogs.

Also fix a crash on shutdown if one of those dialogs is open in overview.

Test: manual
Bug: 850028
Change-Id: I31917875dc7a1c770c61f48b04766e49ef4b9786
Reviewed-on: https://chromium-review.googlesource.com/1178891
Commit-Queue: Sammie Quon <sammiequon@chromium.org>
Reviewed-by: Michael Wasserman <msw@chromium.org>
Reviewed-by: Xiaoqian Dai <xdai@chromium.org>
Cr-Commit-Position: refs/heads/master@{#584124}
Former-commit-id: 7f9f47e11ad05331b8ce2a2976fbbc3d716c8aa0